--- a/app/src/main/res/layout/activity_texture_view_test.xml
+++ b/app/src/main/res/layout/activity_texture_view_test.xml
@@ -10,17 +10,19 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.bluestrom.gao.besselloadingtest.TextureViewTestActivity">
 
-    <com.bluestrom.gao.customview.TextureViewBesselLoading
+    <com.bluestrom.gao.customview.ViewRingPercent
         android:id="@+id/loading"
         android:layout_width="500dp"
         android:layout_height="500dp"
-        android:layout_centerInParent="true" />
+        android:layout_centerInParent="true"
+        android:background="@android:color/white" />
 
     <Button
         android:id="@+id/jump"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="onClick"
-        android:text="跳转" />
+        android:text="跳转"
+        android:visibility="visible" />
 
 </RelativeLayout>
