--- a/app/src/main/res/layout/activity_texture_view_test.xml
+++ b/app/src/main/res/layout/activity_texture_view_test.xml
@@ -10,7 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.bluestrom.gao.besselloadingtest.TextureViewTestActivity">
 
-    <com.bluestrom.gao.customview.ViewRingPercent
+    <com.bluestrom.gao.customview.TextureViewRingPercent
         android:id="@+id/loading"
         android:layout_width="500dp"
         android:layout_height="500dp"
@@ -23,6 +23,6 @@
         android:layout_height="wrap_content"
         android:onClick="onClick"
         android:text="跳转"
-        android:visibility="visible" />
+        android:visibility="gone" />
 
 </RelativeLayout>
