--- a/app/src/main/res/layout/activity_texture_view_test.xml
+++ b/app/src/main/res/layout/activity_texture_view_test.xml
@@ -10,10 +10,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.bluestrom.gao.besselloadingtest.TextureViewTestActivity">
 
-    <com.bluestrom.gao.customview.ViewRingPercent
+    <com.bluestrom.gao.customview.ViewClipRingPercent
         android:id="@+id/loading"
-        android:layout_width="500dp"
-        android:layout_height="500dp"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         android:layout_centerInParent="true" />
 
     <Button
